@@ -518,6 +518,7 @@ BEGIN
                     UDS_ARROWKEYS | UDS_NOTHOUSANDS,246,41,11,14
     EDITTEXT        IDC_SET_MINISLOT_SIZE,69,58,45,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_BIND_ADDRESS,208,58,41,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_MAX_FILELIST_SIZE,69,75,45,14,ES_AUTOHSCROLL
     RTEXT           "Rollback",IDC_SETTINGS_ROLLBACK,7,10,57,8
     LTEXT           "B",IDC_SETTINGS_B,117,10,8,8
     RTEXT           "Write buffer size",IDC_SETTINGS_WRITE_BUFFER,139,10,65,
@@ -532,6 +533,8 @@ BEGIN
     RTEXT           "Mini slot size",IDC_SETTINGS_TEXT_MINISLOT,7,61,57,8
     LTEXT           "KiB",IDC_SETTINGS_KB2,117,61,14,8
     RTEXT           "Bind address",IDC_SETTINGS_BIND_ADDRESS,139,61,65,8
+    RTEXT           "Max filelist size",IDC_SETTINGS_MAX_FILELIST_SIZE,7,78,57,8
+    LTEXT           "MiB",IDC_SETTINGS_MB,117,78,14,8
 END
 
 IDD_NETWORKPAGE DIALOGEX 0, 0, 275, 225
@@ -585,18 +588,22 @@ EXSTYLE WS_EX_STATICEDGE
 CAPTION "Windows"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Auto-open at startup",IDC_SETTINGS_AUTO_OPEN,7,7,261,
-                    116
+    GROUPBOX        "Auto-open at startup",IDC_SETTINGS_AUTO_OPEN,7,7,261,68
     CONTROL         "",IDC_WINDOWS_STARTUP,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | 
                     LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
-                    WS_TABSTOP,13,17,248,99
-    GROUPBOX        "Window options",IDC_SETTINGS_WINDOWS_OPTIONS,7,123,261,
-                    93
+                    WS_TABSTOP,13,17,248,53
+    GROUPBOX        "Window options",IDC_SETTINGS_WINDOWS_OPTIONS,7,76,261,
+                    68
     CONTROL         "",IDC_WINDOWS_OPTIONS,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | 
                     LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
-                    WS_TABSTOP,13,133,248,77
+                    WS_TABSTOP,13,86,248,53
+    GROUPBOX        "Confirmation dialog options",
+                    IDC_SETTINGS_CONFIRM_OPTIONS,7,146,261,65
+    CONTROL         "",IDC_CONFIRM_OPTIONS,"SysListView32",LVS_REPORT | 
+                    LVS_SINGLESEL | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | 
+                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,13,157,248,48
 END
 
 IDD_QUEUEPAGE DIALOGEX 0, 0, 275, 225
