@@ -167,6 +167,7 @@ string ResourceManager::strings[] = {
 "Users", 
 "Ignore TTH searches", 
 "Ignored message: ", 
+"Hub address cannot be empty.", 
 "Invalid file list name", 
 "Invalid number of slots", 
 "Invalid target file (missing directory, check default download directory setting)", 
@@ -352,7 +353,7 @@ string ResourceManager::strings[] = {
 "Advanced settings", 
 "Use antifragmentation method for downloads", 
 "Appearance", 
-"Colors and sounds", 
+"Appearance\\Colors and sounds", 
 "Drop sources below", 
 "Check every", 
 "Min elapsed", 
@@ -421,6 +422,7 @@ string ResourceManager::strings[] = {
 "Logging", 
 "Logs", 
 "Ask what to do when a magnet link is detected.", 
+"Max filelist size", 
 "Max hash speed", 
 "Max tab rows", 
 "Minimize to tray", 
@@ -497,7 +499,7 @@ string ResourceManager::strings[] = {
 "Use OEM monospaced font for viewing text files", 
 "Use system icons when browsing files (slows browsing down a bit)", 
 "Advanced\\User Commands", 
-"Windows", 
+"Appearance\\Windows", 
 "Window options", 
 "Write buffer size", 
 "CRC32 inconsistency (SFV-Check)", 
@@ -753,6 +755,7 @@ string ResourceManager::names[] = {
 "HubUsers", 
 "IgnoreTthSearches", 
 "IgnoredMessage", 
+"IncompleteFavHub", 
 "InvalidListname", 
 "InvalidNumberOfSlots", 
 "InvalidTargetFile", 
@@ -1007,6 +1010,7 @@ string ResourceManager::names[] = {
 "SettingsLogging", 
 "SettingsLogs", 
 "SettingsMagnetAsk", 
+"SettingsMaxFilelistSize", 
 "SettingsMaxHashSpeed", 
 "SettingsMaxTabRows", 
 "SettingsMinimizeTray", 
