@@ -170,6 +170,7 @@ enum Strings { // @DontAdd
 	HUB_USERS, // "Users"
 	IGNORE_TTH_SEARCHES, // "Ignore TTH searches"
 	IGNORED_MESSAGE, // "Ignored message: "
+	INCOMPLETE_FAV_HUB, // "Hub address cannot be empty."
 	INVALID_LISTNAME, // "Invalid file list name"
 	INVALID_NUMBER_OF_SLOTS, // "Invalid number of slots"
 	INVALID_TARGET_FILE, // "Invalid target file (missing directory, check default download directory setting)"
@@ -355,7 +356,7 @@ enum Strings { // @DontAdd
 	SETTINGS_ADVANCED_SETTINGS, // "Advanced settings"
 	SETTINGS_ANTI_FRAG, // "Use antifragmentation method for downloads"
 	SETTINGS_APPEARANCE, // "Appearance"
-	SETTINGS_APPEARANCE2, // "Colors and sounds"
+	SETTINGS_APPEARANCE2, // "Appearance\\Colors and sounds"
 	SETTINGS_AUTODROP_SPEED, // "Drop sources below"
 	SETTINGS_AUTODROP_INTERVAL, // "Check every"
 	SETTINGS_AUTODROP_ELAPSED, // "Min elapsed"
@@ -422,8 +423,9 @@ enum Strings { // @DontAdd
 	SETTINGS_LOG_SYSTEM_MESSAGES, // "Log system messages"
 	SETTINGS_LOG_UPLOADS, // "Log uploads"
 	SETTINGS_LOGGING, // "Logging"
-	SETTINGS_LOGS, // "Logs"
+	SETTINGS_LOGS, // "Advanced\\Logs"
 	SETTINGS_MAGNET_ASK, // "Ask what to do when a magnet link is detected."
+	SETTINGS_MAX_FILELIST_SIZE, // "Max filelist size"
 	SETTINGS_MAX_HASH_SPEED, // "Max hash speed"
 	SETTINGS_MAX_TAB_ROWS, // "Max tab rows"
 	SETTINGS_MINIMIZE_TRAY, // "Minimize to tray"
@@ -500,7 +502,7 @@ enum Strings { // @DontAdd
 	SETTINGS_USE_OEM_MONOFONT, // "Use OEM monospaced font for viewing text files"
 	SETTINGS_USE_SYSTEM_ICONS, // "Use system icons when browsing files (slows browsing down a bit)"
 	SETTINGS_USER_COMMANDS, // "Advanced\\User Commands"
-	SETTINGS_WINDOWS, // "Windows"
+	SETTINGS_WINDOWS, // "Appearance\\Windows"
 	SETTINGS_WINDOWS_OPTIONS, // "Window options"
 	SETTINGS_WRITE_BUFFER, // "Write buffer size"
 	SFV_INCONSISTENCY, // "CRC32 inconsistency (SFV-Check)"
