@@ -63,5 +63,16 @@ that are not online on the hub. These messages originate from hub bots
 and generally contain useful information, like hub specific rules or
 warnings.</dd>
 </dl>
+<h2>Confirm dialog options</h2>
+<dl style="margin-left: 40px;">
+<dt>Confirm Application Exit</dt>
+  <dd>Enabling this option will cause DC++ to prompt you before exiting.</dd>
+  <dt>Confirm favorite hub removal</dt>
+  <dd>Enabling this option will cause DC++ to prompt before you remove
+a favorite hub.</dd>
+  <dt>Confirm item removal in download queue</dt>
+  <dd>Enabling this option will cause DC++ to prompt before you remove
+a file (or files) from the download queue.</dd>
+</dl>
 </body>
 </html>
